@@ -1,10 +1,5 @@
 \name{wrap_hmisc}
 \alias{wrap_hmisc}
-\alias{sum_mean_cl_boot}
-\alias{sum_mean_cl_normal}
-\alias{sum_mean_sdl}
-\alias{sum_median_hilow}
-\alias{sum_range}
 \alias{mean_cl_boot}
 \alias{mean_cl_normal}
 \alias{mean_sdl}
@@ -13,16 +8,14 @@
 \author{Hadley Wickham <h.wickham@gmail.com>}
 
 \description{
-Wrap up a selection of Hmisc to make it easy to use them with \code{\link{stat_summary}}
+Wrap up a selection of Hmisc to make it easy to use with \code{\link{stat_summary}}
 }
-\usage{wrap_hmisc(x, fun, ...)}
+\usage{wrap_hmisc(fun)}
 \arguments{
-\item{x}{}
 \item{fun}{}
-\item{...}{}
 }
 
-\details{}
-
+\details{See the Hmisc documentation for details of their options.}
+\seealso{\code{\link[Hmisc]{smean.cl.boot}}, \code{\link[Hmisc]{smean.cl.normal}}, \code{\link[Hmisc]{smean.sdl}}, \code{\link[Hmisc]{smedian.hilon}}}
 \examples{}
 \keyword{internal}
